# spherical-deepkriging

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  MIGRATION_NOTE.txt  Makefile  README.md  pyproject.toml  setup.py
.github/workflow/: pyliny.yaml  test.yml
.github/workflows/: pyliny.yaml  pypi.yaml  test.yml
artifacts/: generate_framework_figure.py
envs/: README.md
envs/conda/: build_conda_env.sh  create_dfrk_env.sh  find_conda_env.sh  update_dfrk_env.sh  utils.sh
envs/jupyter/: setup_jupyter_kernel.sh  start_jupyter_lab.sh  utils.sh
examples/: README.md
examples/real_data/: experiment_deepkriging_precipitation.ipynb  experiment_deepkriging_temperature.ipynb  experiment_deepkriging_temperature_repeat_multitime.ipynb  experiment_deepkriging_windspeed.ipynb  experiment_deepkriging_windspeed_repeat_multitime.ipynb
examples/simulation/: run_stdscaler_nonoise_50reps.py  run_stdscaler_outliers_50reps.py  simulation_spherical_nn_sim_RSHC_c15_GP_noise_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_GP_outliers_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_GP_pure_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_noGP_pure_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_noise_noGP_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_outliers_noGP_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_outliers_stdscaler_50reps.ipynb
examples/toy/: toy_sphere_deepkriging.ipynb  toy_sphere_deepkriging_colab.ipynb
notebook/real_data/: experiment_deepkriging_precipitation.ipynb  experiment_deepkriging_temperature.ipynb  experiment_deepkriging_temperature_repeat_multitime.ipynb  experiment_deepkriging_windspeed.ipynb  experiment_deepkriging_windspeed_repeat_multitime.ipynb
notebook/simulation/Rerun/: results_sphere_stdscaler_nonoise_50reps_checkpoint.csv  results_sphere_stdscaler_outliers_50reps_checkpoint.csv  simulation_spherical_nn_sim_RSHC_c15_GP_noise_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_GP_outliers_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_GP_pure_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_noGP_pure_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_noise_noGP_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_outliers_noGP_50reps_out.ipynb  simulation_spherical_nn_sim_RSHC_c15_outliers_stdscaler_50reps.ipynb
notebook/simulation/ScenarioI/: simulation_euclidean_GP_noise_chisquare.ipynb  simulation_euclidean_GP_noise_tdf4.ipynb  simulation_euclidean_GP_outliers5.ipynb  simulation_euclidean_GP_without_outliers.ipynb  simulation_spherical_GP_noise_chisquare.ipynb  simulation_spherical_GP_noise_tdf4.ipynb  simulation_spherical_GP_outliers5.ipynb  simulation_spherical_GP_without_outliers.ipynb
notebook/simulation/ScenarioII/: simulation_euclidean_GP_eggholder_noise_chisquare.ipynb  simulation_euclidean_GP_eggholder_noise_tdf4.ipynb  simulation_euclidean_GP_eggholder_outliers5.ipynb  simulation_euclidean_GP_eggholder_without_outliers.ipynb  simulation_spherical_GP_eggholder_noise_chisquare.ipynb  simulation_spherical_GP_eggholder_noise_tdf4.ipynb  simulation_spherical_GP_eggholder_outliers5.ipynb  simulation_spherical_GP_eggholder_without_outliers.ipynb
notebook/simulation/ScenarioIII/: simulation_eggholder_euclidean.ipynb  simulation_eggholder_spherical.ipynb
notebook/test/: experiment_spherical_GP_without_outliers_SNR.ipynb  simulation_spherical_GP_eggholder_without_outliers.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg12.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg128.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg256.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg60.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg64.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg64_norm.ipynb  simulation_spherical_GP_eggholder_without_outliers_all_model_egg70.ipynb  simulation_spherical_GP_eggholder_without_outliers_egg64.ipynb  simulation_spherical_GP_eggholder_without_outliers_fixed_K100_mrts.ipynb  simulation_spherical_GP_eggholder_without_outliers_fixed_K500_mrts.ipynb  simulation_spherical_nonGP_eggholder_without_outliers_all_model.ipynb  simulation_spherical_nonGP_without_outliers_all_model.ipynb  simulation_spherical_nonGP_without_outliers_all_model_add_x.ipynb
spherical_deepkriging/: configs.py  logger.py
spherical_deepkriging/basis_functions/: utils.py
spherical_deepkriging/basis_functions/mrts/: mrts.py  utils.py  visualization.py
spherical_deepkriging/basis_functions/mrts_sphere/: fn_cpp.R  sphere.py  sphere_cpp.py
spherical_deepkriging/basis_functions/mrts_sphere/cpp_extensions/: CMakeLists.txt  __init__.py  setup.py  spherical_basis.cpp
spherical_deepkriging/basis_functions/wendland/: visualization.py  wenland.py
spherical_deepkriging/models/: deep_kriging.py  universal_kriging.py
tests/: conftest.py  test_basis_utils_and_wendland.py  test_basis_visualization.py  test_configs.py  test_deep_kriging_shapes.py  test_deep_kriging_train.py  test_logger.py  test_mrts_modules.py  test_sphere_cpp_unit.py  test_sphere_wrapper_and_cpp_init.py  test_spherical_cpp.py  test_spherical_cpp_setup.py  test_universal_kriging_coords.py  test_universal_kriging_unit.py
